--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,3 +43,33 @@
     margin: 5px 10px;
     font-size: 16px;
 }
+
+.length {
+    display: auto;
+}
+
+.weight {
+    display: none;
+}
+
+.temperature {
+    display: none;
+}
+
+.convert-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 10px 10px;
+    margin-top: 20px;
+}
+
+.result {
+    color: white;
+    margin: 20px 10px;
+    font-size: 25px;
+    font-family: 'Arial', sans-serif;
+}
