--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,3 +73,10 @@
     font-size: 25px;
     font-family: 'Arial', sans-serif;
 }
+
+.select-input {
+    width: 95%;
+    padding: 10px;
+    margin: 5px 10px;
+    font-size: 16px;
+}
