--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,28 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #333;
+}
+
+body.dark-mode {
+    background-color: #f0f0f0;
+}
+
 .box {
     height: 650px;
     width: 500px;
     background-color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.box.dark-mode {
+    background-color: #056450;
 }
 
 .title {
@@ -24,6 +45,11 @@
     cursor: pointer;
     font-size: 16px;
     margin-right: 5px;
+    border-radius: 10px;
+}
+
+.tablinks.dark-mode {
+    background-color: #4CAF50;
 }
 
 .tablinks:hover {
@@ -42,6 +68,7 @@
     padding: 10px;
     margin: 5px 10px;
     font-size: 16px;
+    border-radius: 10px;
 }
 
 .length {
@@ -65,6 +92,13 @@
     font-size: 16px;
     margin: 10px 10px;
     margin-top: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.convert-btn.dark-mode{
+    background-color: #333;
+    color: white;
 }
 
 .result {
@@ -79,4 +113,30 @@
     padding: 10px;
     margin: 5px 10px;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.dark-btn {
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.image {
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    transition: cubic-bezier(1, 0.165, 0.82, 0.075) 0.6s;
+    filter: invert();
+}
+
+.image.dark-mode {
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.6s;
+    transform: rotate(180deg);
+    filter: invert(0);
 }
